# aero

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DMCA_POLICY.md  LEGAL.md  LICENSE-MIT  NOTICE  PRIVACY_POLICY_TEMPLATE.md  README.md  REFACTOR.md  SECURITY.md  TERMS_OF_SERVICE_TEMPLATE.md  TRADEMARKS.md  codecov.yml  compose.yaml  deny.toml  docker-compose.yml  index.html  justfile  netlify.toml  package-lock.json  package.json  playwright.config.cjs  playwright.config.ts  playwright.gpu.config.ts  rust-toolchain.toml  tsconfig.json  vercel.json  vite.config.ts  vite.harness.config.ts  vitest.config.ts  webusb_diagnostics.html
crates/aero-acpi/: Cargo.toml
crates/aero-acpi/src/: lib.rs  tables.rs
crates/aero-acpi/tests/: acpi_enable_handshake.rs  acpi_validation.rs  device_model_sanity.rs  dsdt_snapshot.rs  fadt_flags.rs  iasl_roundtrip.rs  multi_cpu.rs  power_button.rs  sleep_button.rs  sleep_state_advertisement.rs  sleep_wake_methods.rs
crates/aero-aerogpu/: Cargo.toml
crates/aero-aerogpu/src/: lib.rs
crates/aero-audio/: Cargo.toml
crates/aero-audio/benches/: audio_ring.rs
crates/aero-audio/src/: capture.rs  clock.rs  hda.rs  hda_pci.rs  lib.rs  mem.rs  pcm.rs  ring.rs  sink.rs
crates/aero-audio/tests/: audio_frame_clock.rs  audio_frame_clock_vectors.rs  audio_ring_overrun.rs  hda_bdl_base_alignment.rs  hda_capture_dma_writes_guest_memory.rs  hda_capture_does_not_consume_when_inactive.rs  hda_capture_input_amp.rs  hda_capture_ioc_interrupt.rs  hda_capture_pin_gating.rs  hda_capture_reads_mic_ring.rs  hda_capture_telemetry.rs  hda_dma_oob_no_panic.rs  hda_host_sample_rate_clamping.rs  hda_mmio_access_sizes.rs  hda_mmio_bounds.rs  hda_pci_mmio_mapping.rs  hda_pci_profile.rs  hda_pin_power_state.rs  hda_playback.rs  hda_posbuf.rs  hda_posbuf_updates_capture_stream.rs  hda_process_frame_clamping.rs  hda_snapshot_roundtrip.rs  hda_statests_codec_presence.rs  hda_stream_srst_reset.rs  hda_stream_status_rw1c.rs  hda_to_worklet_ring.rs  hda_volume_mute.rs
crates/aero-boot-tests/: Cargo.toml
crates/aero-boot-tests/src/: lib.rs
crates/aero-cpu-core/: Cargo.toml
crates/aero-cpu-core/benches/: emulator_critical.rs  jit_bookkeeping.rs  jit_cache_bookkeeping.rs  paging_bus_bulk.rs  tier0_alu.rs  tier0_rep_movsb.rs  tier0_throughput.rs
crates/aero-cpu-core/examples/: instruction_counter_overhead.rs
crates/aero-cpu-core/src/: assist.rs  bus.rs  cpu.rs  cpuid.rs  descriptors.rs  fpu.rs  fxsave.rs  interrupts.rs  lib.rs  linear_mem.rs  mem.rs  mode.rs  msr.rs  paging_bus.rs  segmentation.rs  sse_state.rs  state.rs  system.rs  time.rs
crates/aero-cpu-core/tests/: a20_wrap_multi_byte.rs  atomics.rs  bus_wrapping.rs  code_cache.rs  cpuid_htt.rs  cpuid_policy.rs  crypto.rs  descriptors_paging.rs  exec_dispatcher_jit_commit_flag.rs  exec_dispatcher_perf_worker.rs  exec_tier0_exceptions.rs  exec_tier0_interrupts.rs  fpu_gating.rs  fxsave.rs  hotness_profile_capacity.rs  interp_integer.rs  interp_x87.rs  interrupts.rs  interrupts_paging.rs  invlpg_log_cap.rs  jit_bookkeeping.rs  jit_equivalence.rs  jit_stats.rs  linear_mem_write_bytes_wrapped.rs  mem_bus_ops.rs  mxcsr_exceptions.rs  page_fault_restart.rs  page_version_tracker.rs  page_version_tracker_bounds.rs  page_version_tracker_jit_runtime.rs  paging.rs  paging_bulk_ops.rs  paging_bus_io.rs  pending_event_state_bounds.rs  perf_counters.rs  protected16_ip_wrap_assist.rs  qemu_diff.rs  segmentation_tests.rs  sse.rs  string.rs  (+18 more)
crates/aero-cpu-decoder/: Cargo.toml  README.md
crates/aero-cpu-decoder/src/: lib.rs
crates/aero-d3d11/: Cargo.toml
crates/aero-d3d11-wasm/: Cargo.toml
crates/aero-d3d11-wasm/src/: lib.rs
crates/aero-d3d9/: Cargo.toml
crates/aero-devices-gpu/: Cargo.toml
crates/aero-devices-nvme/: Cargo.toml  README.md
crates/aero-devices-storage/: Cargo.toml
crates/aero-dxbc/: Cargo.toml
crates/aero-emulator/: Cargo.toml  README.md
crates/aero-gpu/: Cargo.toml
crates/aero-gpu-trace-replay/: Cargo.toml
crates/aero-gpu-vga/: Cargo.toml
crates/aero-gpu-wasm/: Cargo.toml
crates/aero-ipc/: Cargo.toml
crates/aero-jit-wasm/: Cargo.toml
crates/aero-jit-x86/: Cargo.toml
crates/aero-l2-proxy/: Cargo.toml  Dockerfile
crates/aero-machine/: Cargo.toml
crates/aero-machine-cli/: Cargo.toml
crates/aero-mem/: Cargo.toml
crates/aero-mmu/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_aero_storage_sparse_open.dict  fuzz_aero_storage_sparse_open.rs  fuzz_aerogpu_bc_decompress.rs  fuzz_aerogpu_parse.rs  fuzz_aerogpu_trace_read.dict  fuzz_aerogpu_trace_read.rs  fuzz_aerosparse_open.dict  fuzz_aerosparse_open.rs  fuzz_ahci.rs  fuzz_ahci_command.rs  fuzz_atapi.rs  fuzz_auth_tokens.rs  fuzz_bios_interrupt_dispatch.rs  fuzz_bios_interrupts.rs  fuzz_bus_rw.rs  fuzz_d3d11_sm4_translate.dict  fuzz_d3d11_sm4_translate.rs  fuzz_d3d9_shader_parse.dict  fuzz_d3d9_shader_parse.rs  fuzz_d3d9_sm3.dict  fuzz_d3d9_sm3_decode.rs  fuzz_d3d9_sm3_wgsl.rs  fuzz_disk_image_open_auto.dict  fuzz_disk_image_open_auto.rs  fuzz_disk_image_open_auto_rw.rs  fuzz_dxbc_parse.dict  fuzz_dxbc_parse.rs  fuzz_dxbc_sm4_parse.dict  fuzz_dxbc_sm4_parse.rs  fuzz_e1000_mmio_poll.rs  fuzz_ehci.rs  fuzz_ehci_periodic.rs  fuzz_hda_corb_verbs.rs  fuzz_hda_mmio.rs  fuzz_hid_report_descriptor.dict  fuzz_hid_report_descriptor.rs  fuzz_http_range.rs  fuzz_i8042.dict  fuzz_i8042.rs  fuzz_i8042_port_io.rs  (+16 more)
fuzz/scripts/: rustc_nightly.sh
xtask/: Cargo.toml
xtask/src/: cmd_bios_rom.rs  cmd_conformance.rs  cmd_input.rs  cmd_shader_opcode_report.rs  cmd_snapshot.rs  cmd_test_all.rs  cmd_wasm.rs  cmd_wasm_check.rs  cmd_web.rs  error.rs  main.rs  paths.rs  runner.rs  tools.rs
xtask/tests/: conformance_cli.rs  input_cli.rs  input_e2e_subset.rs  input_node_modules.rs  input_wasm.rs  shader_opcode_report_cli.rs  snapshot_cli.rs  snapshot_diff.rs  snapshot_inspect_ordering.rs  snapshot_inspect_usb.rs  test_all_cli.rs  test_all_fixtures.rs  web_cli.rs
(+6826 files in other folders)
