[package]
name = "aero"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "crates/aero-acpi",
    "crates/aero-audio",
    "crates/aero-gpu",
    "crates/aero-gpu-device",
    "crates/aero-gpu-trace",
    "crates/aero-gpu-utils",
    "crates/aero-shared",
    "crates/aero-emulator",
    "crates/aero-core",
    "crates/aero-cpu",
    "crates/aero-tests",
    "crates/aero-http-range",
    "crates/aero-ipc",
    "crates/aero-wasm",
    "crates/aero_jit",
    "crates/aero-microbench",
    "crates/aero-net-e1000",
    "crates/aero-net-stack",
    "crates/aero-storage",
    "crates/aero-mem",
    "crates/aero-perf",
    "crates/aero-mmu",
    "crates/aero-snapshot",
    "crates/aero-io-snapshot",
    "crates/aero-opfs",
    "crates/aero-storage-server",
    "crates/aero-virtio",
    "crates/aero-vm",
    "crates/aero-webgpu",
    "crates/aero_cpu",
    "crates/aero_cpu_core",
    "crates/aero_types",
    "crates/aero_x86",
    "crates/aero-cpu-decoder",
    "crates/aero-dxbc",
    "crates/aero-d3d9-shader",
    "crates/aero-d3d9",
    "crates/aero-debug",
    "crates/aero-d3d11",
    "crates/aero-tier0",
    "crates/devices",
    "crates/emulator",
    "crates/firmware",
    "crates/machine",
    "crates/memory",
    "crates/platform",
    "crates/perf",
    "crates/aero-devices-input",
    "crates/aero-devices-nvme",
    "crates/aero-devices-storage",
    "crates/nt-packetlib",
    # `server/` is a Node/JS service (no Cargo.toml); keep it out of the Rust workspace.
    "tools/bcd_patch",
    "tools/qemu_diff",
    "crates/virtio-gpu-proto",
    "crates/vm",
    "backend/aero-gateway",
    "crates/aero-jit-proto",
    "crates/aero-usb",
    "crates/st-idb",
    "crates/aero-net",
    "crates/conformance",
    "tools/net-proxy-server",
    "emulator/protocol",
    "crates/aero-gpu-vga",
    "drivers/protocol/virtio",
    "crates/aero-time",
    "crates/aero-timers",
    "crates/aero-cpu-time",
    "xtask",
]

exclude = [
    "fuzz",
    # Standalone tools with their own lockfiles (build by `cd tools/<name> && cargo ...`).
    "tools/win-offline-cert-injector",
    "tools/win-certstore-regblob-export",
    "tools/win7-slipstream",
]

[dev-dependencies]
aero-d3d9 = { path = "crates/aero-d3d9" }
aero-d3d11 = { path = "crates/aero-d3d11" }
aero-emulator = { path = "crates/aero-emulator" }
aero-gpu = { path = "crates/aero-gpu" }
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "pnm"] }
pollster = "0.3"
serde_json = "1.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
wgpu = "0.20"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bitflags = "2.4.2"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "instr_info", "std"] }
thiserror = "1.0.56"
