[package]
name = "aero"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "crates/aero-acpi",
    "crates/aero-pci-routing",
    "crates/aero-audio",
    "crates/aero-auth-tokens",
    "crates/aero-fuzz",
    "crates/aero-aerogpu",
    "crates/aero-gpu",
    "crates/aero-gpu-trace",
    "crates/aero-gpu-trace-replay",
    "crates/aero-gpu-utils",
    "crates/aero-gpu-wasm",
    "crates/aero-shared",
    "crates/aero-edid",
    "crates/aero-core",
    "crates/aero-boot-tests",
    "crates/aero-tests",
    "crates/aero-http-range",
    "crates/aero-ipc",
    "crates/aero-wasm",
    "crates/aero-jit-x86",
    # Built directly by `wasm-pack` in `web/scripts/build_wasm.mjs`; Cargo requires that
    # packages under the workspace root are explicitly listed here (or in `exclude`).
    "crates/aero-jit-wasm",
    "crates/aero-jit",
    "crates/aero-microbench",
    "crates/aero-net-backend",
    "crates/aero-net-e1000",
    "crates/aero-net-pump",
    "crates/aero-l2-protocol",
    "crates/aero-tcp-mux-protocol",
    "crates/aero-udp-relay-protocol",
    "crates/aero-l2-proxy",
    "crates/aero-pcapng",
    "crates/aero-net-stack",
    "crates/aero-net-trace",
    "crates/aero-storage",
    "crates/aero-storage-adapters",
    "crates/aero-mem",
    "crates/aero-perf",
    "crates/aero-mmu",
    "crates/aero-snapshot",
    "crates/aero-smp",
    "crates/aero-io-snapshot",
    "crates/aero-opfs",
    "crates/aero-storage-server",
    "crates/aero-virtio",
    "crates/aero-webgpu",
    "crates/aero-cpu-core",
    "crates/aero-types",
    "crates/aero-x86",
    "crates/aero-cpu-decoder",
    "crates/aero-dxbc",
    "crates/aero-d3d9",
    "crates/aero-debug",
    "crates/aero-interrupts",
    "crates/aero-d3d11",
    # wasm-pack package used by web harnesses / Playwright tests.
    "crates/aero-d3d11-wasm",
    "crates/aero-machine",
    "crates/aero-machine-cli",
    "crates/devices",
    # Compatibility shim so `cargo test -p devices` continues to work.
    "crates/devices-compat",
    "crates/emulator",
    "crates/firmware",
    "crates/memory",
    "crates/platform",
    # Compatibility shim so `cargo test -p platform` continues to work.
    "crates/platform-compat",
    "crates/aero-guest-phys",
    "crates/aero-pc-constants",
    "crates/aero-pc-platform",
    "crates/aero-pci-firmware-adapter",
    "crates/perf",
    "crates/aero-devices-input",
    "crates/aero-devices-gpu",
    "crates/aero-devices-nvme",
    "crates/aero-devices-storage",
    "crates/nt-packetlib",
    # `server/` and `backend/aero-gateway/` are Node/JS services (no Cargo.toml); keep them out of the Rust workspace.
    "tools/bcd_patch",
    "tools/device_contract_validator",
    "tools/aero-disk-convert",
    "tools/qemu_diff",
    "crates/virtio-gpu-proto",
    "crates/aero-usb",
    "crates/st-idb",
    "crates/conformance",
    "emulator/protocol",
    "emulator/protocol-compat",
    "crates/aero-gpu-vga",
    "drivers/protocol/virtio",
    "crates/aero-time",
    "crates/aero-timers",
    # Legacy/reference-only SM2/SM3 token-stream parser + disassembler; kept in-workspace so it
    # can be exercised by unit tests and fuzzing.
    "crates/legacy/aero-d3d9-shader",
    "xtask",
]

exclude = [
    "fuzz",
    # `crates/legacy/*` are reference-only; keep them out of the workspace so they don't
    # block workspace-wide builds, but mark them as excluded so they can still be built
    # directly via `--manifest-path` without Cargo treating them as a missing workspace member.
    "crates/legacy/aero-emulator",
    "crates/legacy/aero-vm",
    "crates/legacy/vm",
    # Standalone tools with their own lockfiles (build by `cd tools/<name> && cargo ...`).
    # Legacy/diagnostic gateway prototype (NOT the production gateway).
    "tools/aero-gateway-rs",
    "tools/win-offline-cert-injector",
    "tools/win-certstore-regblob-export",
    "tools/win7-slipstream",
]

[dev-dependencies]
aero-d3d9 = { path = "crates/aero-d3d9" }
aero-d3d11 = { path = "crates/aero-d3d11" }
aero-dxbc = { path = "crates/aero-dxbc", features = ["test-utils"] }
aero-gpu = { path = "crates/aero-gpu" }
aero-protocol = { path = "emulator/protocol" }
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"
image = { version = "0.25.5", default-features = false, features = ["png", "pnm"] }
pollster = "0.3"
serde_json = "1.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wasm-bindgen-test = "0.3"
wgpu = "0.20"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[workspace.package]
edition = "2021"

[workspace.dependencies]
bitflags = "2.4.2"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "instr_info", "std"] }
thiserror = "2.0.17"
