[package]
name = "memory-fuzz"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
base64 = "0.22"
sha2 = "0.10"

[dependencies.memory]
path = "../crates/memory"

[dependencies.aero-snapshot]
path = "../crates/aero-snapshot"

[dependencies.aero-io-snapshot]
path = "../crates/aero-io-snapshot"

[dependencies.aero-devices-storage]
path = "../crates/aero-devices-storage"

[dependencies.aero-devices-input]
path = "../crates/aero-devices-input"

[dependencies.aero-usb]
path = "../crates/aero-usb"

[dependencies.aero-devices]
path = "../crates/devices"

[dependencies.aero-storage]
path = "../crates/aero-storage"

[dependencies.aero-http-range]
path = "../crates/aero-http-range"

[dependencies.aero-auth-tokens]
path = "../crates/aero-auth-tokens"

[dependencies.aero-gpu]
path = "../crates/aero-gpu"

[dependencies.aero-dxbc]
path = "../crates/aero-dxbc"
features = ["test-utils"]

[dependencies.aero-d3d11]
path = "../crates/aero-d3d11"

[dependencies.aero-d3d9]
path = "../crates/aero-d3d9"
features = ["dxbc-robust"]

[dependencies.aero-audio]
path = "../crates/aero-audio"

[dependencies.aero-virtio]
path = "../crates/aero-virtio"

[dependencies.aero-gpu-trace]
path = "../crates/aero-gpu-trace"

[dependencies.aero-d3d9-shader]
# Legacy/reference shader token-stream parser (currently lives under `crates/legacy/`).
path = "../crates/legacy/aero-d3d9-shader"

[dependencies.aero-shared]
path = "../crates/aero-shared"

[dependencies.aero-protocol]
path = "../emulator/protocol"

[dependencies.firmware]
path = "../crates/firmware"

[dependencies.aero-cpu-core]
path = "../crates/aero-cpu-core"

[dependencies.aero-l2-protocol]
path = "../crates/aero-l2-protocol"

[dependencies.aero-net-stack]
path = "../crates/aero-net-stack"

[dependencies.aero-net-e1000]
path = "../crates/aero-net-e1000"

[[bin]]
name = "fuzz_mmu_translate"
path = "fuzz_targets/fuzz_mmu_translate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bus_rw"
path = "fuzz_targets/fuzz_bus_rw.rs"
test = false
doc = false

[[bin]]
name = "fuzz_snapshot_decode"
path = "fuzz_targets/fuzz_snapshot_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ahci"
path = "fuzz_targets/fuzz_ahci.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ide"
path = "fuzz_targets/fuzz_ide.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ahci_command"
path = "fuzz_targets/fuzz_ahci_command.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ide_busmaster"
path = "fuzz_targets/fuzz_ide_busmaster.rs"
test = false
doc = false

[[bin]]
name = "fuzz_http_range"
path = "fuzz_targets/fuzz_http_range.rs"
test = false
doc = false

[[bin]]
name = "fuzz_atapi"
path = "fuzz_targets/fuzz_atapi.rs"
test = false
doc = false

[[bin]]
name = "fuzz_piix3_ide_pci"
path = "fuzz_targets/fuzz_piix3_ide_pci.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aero_storage_sparse_open"
path = "fuzz_targets/fuzz_aero_storage_sparse_open.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aerogpu_parse"
path = "fuzz_targets/fuzz_aerogpu_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aerosparse_open"
path = "fuzz_targets/fuzz_aerosparse_open.rs"
test = false
doc = false

[[bin]]
name = "fuzz_disk_image_open_auto"
path = "fuzz_targets/fuzz_disk_image_open_auto.rs"
test = false
doc = false

[[bin]]
name = "fuzz_disk_image_open_auto_rw"
path = "fuzz_targets/fuzz_disk_image_open_auto_rw.rs"
test = false
doc = false

[[bin]]
name = "fuzz_i8042_port_io"
path = "fuzz_targets/fuzz_i8042_port_io.rs"
test = false
doc = false

[[bin]]
name = "fuzz_i8042"
path = "fuzz_targets/fuzz_i8042.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ps2_keyboard_commands"
path = "fuzz_targets/fuzz_ps2_keyboard_commands.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ps2_mouse_commands"
path = "fuzz_targets/fuzz_ps2_mouse_commands.rs"
test = false
doc = false

[[bin]]
name = "fuzz_uhci"
path = "fuzz_targets/fuzz_uhci.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hid_report_descriptor"
path = "fuzz_targets/fuzz_hid_report_descriptor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dxbc_sm4_parse"
path = "fuzz_targets/fuzz_dxbc_sm4_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dxbc_parse"
path = "fuzz_targets/fuzz_dxbc_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_d3d9_sm3_decode"
path = "fuzz_targets/fuzz_d3d9_sm3_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_auth_tokens"
path = "fuzz_targets/fuzz_auth_tokens.rs"
test = false
doc = false

[[bin]]
name = "fuzz_d3d9_sm3_wgsl"
path = "fuzz_targets/fuzz_d3d9_sm3_wgsl.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hda_mmio"
path = "fuzz_targets/fuzz_hda_mmio.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hda_corb_verbs"
path = "fuzz_targets/fuzz_hda_corb_verbs.rs"
test = false
doc = false

[[bin]]
name = "fuzz_virtio_snd_queues"
path = "fuzz_targets/fuzz_virtio_snd_queues.rs"
test = false
doc = false

[[bin]]
name = "fuzz_l2_protocol_decode"
path = "fuzz_targets/fuzz_l2_protocol_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_net_stack_outbound_ethernet"
path = "fuzz_targets/fuzz_net_stack_outbound_ethernet.rs"
test = false
doc = false

[[bin]]
name = "fuzz_e1000_mmio_poll"
path = "fuzz_targets/fuzz_e1000_mmio_poll.rs"
test = false
doc = false

[[bin]]
name = "fuzz_virtio_net_queue"
path = "fuzz_targets/fuzz_virtio_net_queue.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tier0_step"
path = "fuzz_targets/fuzz_tier0_step.rs"
test = false
doc = false

[[bin]]
name = "fuzz_linear_mem_wrapped"
path = "fuzz_targets/fuzz_linear_mem_wrapped.rs"
test = false
doc = false

[[bin]]
name = "fuzz_d3d11_sm4_translate"
path = "fuzz_targets/fuzz_d3d11_sm4_translate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aerogpu_trace_read"
path = "fuzz_targets/fuzz_aerogpu_trace_read.rs"
test = false
doc = false

[[bin]]
name = "fuzz_d3d9_shader_parse"
path = "fuzz_targets/fuzz_d3d9_shader_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bios_interrupt_dispatch"
path = "fuzz_targets/fuzz_bios_interrupt_dispatch.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aerogpu_bc_decompress"
path = "fuzz_targets/fuzz_aerogpu_bc_decompress.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bios_interrupts"
path = "fuzz_targets/fuzz_bios_interrupts.rs"
test = false
doc = false
