[package]
name = "aero-acpi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-pci-routing = { path = "../aero-pci-routing" }

[dev-dependencies]
aero-devices = { path = "../devices" }
aero-pc-constants = { path = "../aero-pc-constants" }
aero-platform = { path = "../platform" }
tempfile = "3"
