[package]
name = "aero-audio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-devices = { path = "../devices" }
aero-platform = { path = "../platform" }
aero-io-snapshot = { path = "../aero-io-snapshot", optional = true }
memory = { path = "../memory" }

[features]
io-snapshot = ["dep:aero-io-snapshot"]

[dev-dependencies]
aero-io-snapshot = { path = "../aero-io-snapshot" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[test]]
name = "hda_snapshot_roundtrip"
path = "tests/hda_snapshot_roundtrip.rs"
required-features = ["io-snapshot"]

[[bench]]
name = "audio_ring"
harness = false
