[package]
name = "aero-boot-tests"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true
publish = false

[dev-dependencies]
anyhow = "1"
image = { version = "0.25.5", default-features = false, features = ["png", "pnm"] }
serde_json = "1"
tempfile = "3"
firmware = { path = "../firmware" }
memory = { path = "../memory" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[[test]]
name = "boot_basic"
path = "../../tests/boot/basic_boot.rs"

[[test]]
name = "boot_sector"
path = "../../tests/boot_sector.rs"

[[test]]
name = "freedos_boot"
path = "../../tests/freedos_boot.rs"

[[test]]
name = "windows7_boot"
path = "../../tests/windows7_boot.rs"

