[package]
name = "aero-cpu-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
legacy-interp = []
qemu-diff = ["dep:qemu_diff"]

[dependencies]
aero-x86 = { path = "../aero-x86" }
aero-perf = { path = "../aero-perf" }
aero-mmu = { path = "../aero-mmu" }
qemu_diff = { package = "qemu-diff", path = "../../tools/qemu_diff", optional = true }

[dev-dependencies]
memoffset = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[test]]
name = "bus_wrapping"
path = "tests/bus_wrapping.rs"
required-features = ["legacy-interp"]

[[test]]
name = "qemu_diff"
path = "tests/qemu_diff.rs"
required-features = ["qemu-diff"]

[[bench]]
name = "emulator_critical"
harness = false
required-features = ["legacy-interp"]
